Modified new api end point

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.OtpActivity" />
+        <activity android:name=".ui.OtpBankActivity" />
         <activity android:name=".ui.CyberPayActivty">
 
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".ui.BankAccountActivity"/>
     </application>
 
 </manifest>
