--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-//        applicationId "com.example.cyberpay_android"
+        applicationId "com.example.cyberpay_android"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
@@ -15,6 +15,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -33,5 +37,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //EditText Custom
+    implementation 'com.ndroid:cool-view:1.0'
+
+    implementation 'com.github.d-max:spots-dialog:0.7@aar'
+
 
 }
