--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.cyberpay_android"
+//        applicationId "com.example.cyberpay_android"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
