Close Cyber Pay web when transaction Fails

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,19 +16,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.MakePaymentActivity"></activity>
-        <activity android:name=".ui.CyberpayPaymentSelectionActivity">
+        <activity android:name=".ui.MakePaymentActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.CyberpayPaymentSelectionActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.OtpActivity" />
-        <activity android:name=".ui.OtpBankActivity" />
-        <activity android:name=".ui.CyberPayActivty"></activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".ui.BankAccountActivity" />
+        <activity android:name=".ui.OtpActivity" android:screenOrientation="portrait" />
+        <activity android:name=".ui.OtpBankActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.CyberPayActivty" android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.BankAccountActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
