Change the Flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,20 +15,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.MakePaymentActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".ui.CyberpayPaymentSelectionActivity" android:screenOrientation="portrait">
+        <activity android:name=".ui.CardPinActivity"></activity>
+        <activity
+            android:name=".ui.MakePaymentActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.CyberpayPaymentSelectionActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.OtpActivity" android:screenOrientation="portrait" />
-        <activity android:name=".ui.OtpBankActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".ui.CyberPayActivty" android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".ui.BankAccountActivity" android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.OtpActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.OtpBankActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.CyberPayActivty"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.BankAccountActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
